# LangChain-RAG-Based-Hotel-Receptionist-App-with-Gemini-API

./: Readme.md  data.txt  main.py  pyproject.toml
